@@ -4,7 +4,9 @@ CC="@CC@"
 
 ## Anciliary variables that need to be set in order for the final
 ## (substituted) SWARM_LD{FLAGS,ADD} variable to be set correctly
-config_swarm_libdir="@libdir@"
+swarm_prefix="@swarm_prefix@"
+swarm_exec_prefix="@swarm_exec_prefix@"
+swarm_libdir="@swarm_libdir@"
 
 tcllibdir="@tcllibdir@"
 tklibdir="@tklibdir@"
@@ -13,34 +15,34 @@ ffidir="@ffidir@"
 zliblibdir="@zliblibdir@"
 pnglibdir="@pnglibdir@"
 
-config_swarm_TCLLDFLAGS="@TCLLDFLAGS@"
-config_swarm_TKLDFLAGS="@TKLDFLAGS@"
-config_swarm_BLTLDFLAGS="@BLTLDFLAGS@"
-config_swarm_FFILDFLAGS="@FFILDFLAGS@"
-config_swarm_PNGLDFLAGS="@PNGLDFLAGS@"
-config_swarm_ZLIBLDFLAGS="@ZLIBLDFLAGS@"
+swarm_TCLLDFLAGS="@TCLLDFLAGS@"
+swarm_TKLDFLAGS="@TKLDFLAGS@"
+swarm_BLTLDFLAGS="@BLTLDFLAGS@"
+swarm_FFILDFLAGS="@FFILDFLAGS@"
+swarm_PNGLDFLAGS="@PNGLDFLAGS@"
+swarm_ZLIBLDFLAGS="@ZLIBLDFLAGS@"
 
-config_swarm_TCLLIB="@TCLLIB@"
-config_swarm_TKLIB="@TKLIB@"
-config_swarm_BLTLIB="@BLTLIB@"
-config_swarm_FFILIB="@FFILIB@"
+swarm_TCLLIB="@TCLLIB@"
+swarm_TKLIB="@TKLIB@"
+swarm_BLTLIB="@BLTLIB@"
+swarm_FFILIB="@FFILIB@"
 
-config_swarm_PNGLIB="-lpng"
-config_swarm_ZLIBLIB="-lz"
+swarm_PNGLIB="-lpng"
+swarm_ZLIBLIB="-lz"
 
-config_swarm_X_LIBS="@X_LIBS@"
-config_swarm_X_EXTRA_LIBS="@X_EXTRA_LIBS@"
-config_swarm_GUILIBS="@GUILIBS@"
+swarm_X_LIBS="@X_LIBS@"
+swarm_X_EXTRA_LIBS="@X_EXTRA_LIBS@"
+swarm_GUILIBS="@GUILIBS@"
 
-config_swarm_SYSLIBS="$config_swarm_BLTLIB $config_swarm_TKLIB $config_swarm_TCLLIB $config_swarm_PNGLIB $config_swarm_ZLIBLIB $config_swarm_FFILIB $config_swarm_GUILIBS -lobjc -lm"
+swarm_SYSLIBS="$swarm_BLTLIB $swarm_TKLIB $swarm_TCLLIB $swarm_PNGLIB $swarm_ZLIBLIB $swarm_FFILIB $swarm_GUILIBS -lobjc -lm"
 
-config_swarm_SWARMLIBS="-lspace -lanalysis -lsimtools -lsimtoolsgui -ltkobjc -ltclobjc -lactivity -lrandom -lobjectbase -lcollections -ldefobj -lmisc"
+swarm_SWARMLIBS="-lspace -lanalysis -lsimtools -lsimtoolsgui -ltkobjc -ltclobjc -lactivity -lrandom -lobjectbase -lcollections -ldefobj -lmisc"
 
-config_swarm_LIBS="@LIBS@"
+swarm_LIBS="@LIBS@"
 
 ## The final shell variables which are to be substituted in the application
 ## Makefiles(s)
 
-SWARM_LDFLAGS="-L$config_swarm_libdir @RPATH@$config_swarm_libdir $config_swarm_BLTLDFLAGS $config_swarm_TCLLDFLAGS $config_swarm_TKLDFLAGS $config_swarm_FFILDFLAGS $config_swarm_PNGLDFLAGS $config_swarm_ZLIBLDFLAGS $config_swarm_X_LIBS"
+SWARM_LDFLAGS="-L$swarm_libdir @RPATH@$swarm_libdir $swarm_BLTLDFLAGS $swarm_TCLLDFLAGS $swarm_TKLDFLAGS $swarm_FFILDFLAGS $swarm_PNGLDFLAGS $swarm_ZLIBLDFLAGS $swarm_X_LIBS"
 
-SWARM_LDADD="$config_swarm_SWARMLIBS $config_swarm_SYSLIBS $config_swarm_LIBS"
+SWARM_LDADD="$swarm_SWARMLIBS $swarm_SYSLIBS $swarm_LIBS"
